# s3o

./: Cargo.toml  README.md  rustfmt.toml
docs/: design.md  literature-survey.md  source-verified-comparison.md
docs/research/: aws-sdk-s3.md  boto3-s3transfer.md  go-s3manager.md  io-models-and-scheduling.md  java-crt.md  minio-go.md  object-store.md  opendal.md  source-verification-log.md
examples/: usage.rs
interview/: Cargo.toml  INTERVIEWER_GUIDE.md  PROBLEM.md  solution.rs  template.rs
src/: client.rs  config.rs  error.rs  lib.rs  metrics.rs  pool.rs  types.rs
tests/: integration.rs
