[package]
name = "s3o"
version = "0.1.0"
edition = "2021"
description = "Opinionated S3 client with read/write split pools, auto-multipart, and per-operation metrics"
license = "Apache-2.0"

[dependencies]
aws-sdk-s3 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
futures = "0.3"
bytes = "1"
tracing = "0.1"
metrics = "0.24"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
s3s = "0.13"
s3s-fs = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tempfile = "3"
